# Gems2

./: CMakeLists.txt  LAB_GEMS.sln  LAB_GEMS.vcxproj  LAB_GEMS.vcxproj.filters  README.md  bomb.cpp  bomb.h  elem.cpp  elem.h  gametable.cpp  gametable.h  init.cpp  init.h  main.cpp  pallete.h  quad.cpp  quad.h  recolor.cpp  recolor.h
